Fix on small screen

--- a/src/styles/common/footer.scss
+++ b/src/styles/common/footer.scss
@@ -34,7 +34,7 @@ footer.site-footer {
     padding: 0 15px;
     margin: 10px 0;
 
-    font-size: 0.75rem;
+    font-size: 0.875em;
 
     & > li:not(.unmarked) {
       margin-left: 30px;
