--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -16,10 +16,16 @@
 }
 
 body {
+  min-width: 400px;
+
   font-family: $body-ff;
   font-size: $body-fz;
 
   margin: 0;
+
+  @include xs-screen() {
+    font-size: $body-fz - 2;
+  }
 }
 
 main {
@@ -129,22 +135,22 @@ h1, h2 ,h3, h4, h5, h6 {
   }
 }
 h1 {
-  font-size: 3.5rem;
+  font-size: 3.625em;
 }
 h2 {
-  font-size: 3rem;
+  font-size: 3.125em;
 }
 h3 {
-  font-size: 2.5rem;
+  font-size: 2.625em;
 }
 h4 {
-  font-size: 2rem;
+  font-size: 2.125em;
 }
 h5 {
-  font-size: 1.5rem;
+  font-size: 1.625em;
 }
 h6 {
-  font-size: 1rem;
+  font-size: 1.125em;
 }
 
 button, input[type=button], input[type=submit] {
@@ -156,12 +162,12 @@ button, input[type=button], input[type=submit] {
 
   background-color: transparent;
 
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-weight: 600;
   color: $blue;
 
   border: 2px solid $blue;
-  border-radius: .25rem;
+  border-radius: .25em;
 
   cursor: pointer;
 
@@ -181,7 +187,7 @@ button, input[type=button], input[type=submit] {
 
     padding: 5px 25px;
 
-    font-size: 1rem;
+    font-size: 1em;
   }
 }
 
@@ -224,29 +230,19 @@ button, input[type=button], input[type=submit] {
 
   // Медиа запросы
   @include xl-screen() {
-    & {
       width: $lg-screen-size;
-    }
   }
   @include lg-screen() {
-    & {
       width: $md-screen-size;
-    }
   }
   @include md-screen() {
-    & {
       width: $sm-screen-size;
-    }
   }
   @include sm-screen() {
-    & {
       width: $xs-screen-size;
-    }
   }
   @include xs-screen() {
-    & {
-      width: $xs-screen-size;
-    }
+      width: 100%;
   }
 }
 
@@ -398,6 +394,10 @@ nav {
     }
     &:last-child {
       margin-right: 0;
+    }
+
+    @include xs-screen() {
+      text-align: center;
     }
   }
 }
