--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -52,7 +52,7 @@ header.site-header {
     }
 
     p {
-      margin-top: -2rem;
+      margin-top: -2em;
     }
 
     .angle-down {
